--- a/EloquentExtensions.Specs/EloquentExtensions.Specs.csproj
+++ b/EloquentExtensions.Specs/EloquentExtensions.Specs.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1"/>
     <PackageReference Include="Machine.Specifications" Version="1.0.0"/>
     <PackageReference Include="Machine.Specifications.Should" Version="1.0.0"/>
     <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.9.0"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EloquentExtensions\EloquentExtensions.csproj"/>
   </ItemGroup>
 </Project>
