--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: csharp
+mono: none
+dotnet: 2.2.401
+solution: eloquent_extensions.sln
+
+install:
+  - dotnet restore
+
+script:
+  - dotnet build
+  - dotnet test
