--- a/EloquentExtensions.Specs/EloquentExtensions.Specs.csproj
+++ b/EloquentExtensions.Specs/EloquentExtensions.Specs.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0"/>
     <PackageReference Include="Machine.Specifications" Version="1.0.0"/>
     <PackageReference Include="Machine.Specifications.Should" Version="1.0.0"/>
     <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.9.0"/>
