--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,9 @@ _TeamCity*
 *.coverage
 *.coveragexml
 
+# Coverlet coverage results
+coverage.json
+
 # NCrunch
 _NCrunch_*
 .*crunch*.local.xml
