--- a/EloquentExtensions.Specs/EloquentExtensions.Specs.csproj
+++ b/EloquentExtensions.Specs/EloquentExtensions.Specs.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Machine.Specifications" Version="1.0.0"/>
     <PackageReference Include="Machine.Specifications.Should" Version="1.0.0"/>
     <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.9.0"/>
+    <PackageReference Include="coverlet.msbuild" Version="2.7.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EloquentExtensions\EloquentExtensions.csproj"/>
